--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="user.png" alt="">
+                <img src="images/user.png" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">about me</h1>
@@ -109,7 +109,7 @@
     <h1 class="sub-title">my work</h1>
     <div class="work-list">
         <div class="work">
-            <img src="work-1.png" alt="">
+            <img src="images/work-1.png" alt="">
             <div class="layer">
                <h3>social media app</h3> 
                <p>the app connects you the taleented people around the world</p>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="work">
-            <img src="work-2.png" alt="">
+            <img src="images/work-2.png" alt="">
             <div class="layer">
                 <h3>shopping app</h3> 
                 <p>the app connects you the best products around the world</p>
@@ -125,7 +125,7 @@
              </div>
         </div>
         <div class="work">
-            <img src="work-3.png" alt="">
+            <img src="images/work-3.png" alt="">
             <div class="layer">
                 <h3>education app</h3> 
                 <p>the app connects you the taleented people around the world</p>
